--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
         </dnews-story-comments>
         &bull;
         <time is="relative-time" datetime="{{created_at}}">
-          April 1, 2014
+          {{created_at}}
         </time>
         from {{links.user}}
       </div>
