--- a/views/partials/imports.hbs
+++ b/views/partials/imports.hbs
@@ -1,2 +1,2 @@
-<link rel="import" href="elements/dnews-elements.html">
-<link rel="import" href="elements/time-elements.html">
+<link rel="import" href="/elements/dnews-elements.html">
+<link rel="import" href="/elements/time-elements.html">
